<resources>
    <string name="app_name">Sell App</string>
    <string name="txt_shop">Thế giới mua sắm trong tầm tay bạn</string>
    <string name="txt_shipper">Giao hàng tận nơi - Thanh toán dễ dàng</string>
    <string name="txt_payment">100% bảo vệ người tiêu dùng</string>
    <string name="exit">Exit app</string>
    <string name="exit_message">Are you sure?</string>
    <string name="txtDanhMuc">DANH MỤC</string>
    <string name="txt_san_pham_moi">Sản Phẩm Mới</string>
    <string name="danh_muc">Danh mục</string>
    <string name="ban_chay">Bán Chạy</string>
    <string name="gia">Giá</string>
    <string name="moi_nhat">Mới Nhất</string>
    <string name="comment">Đánh giá và nhận xét</string>
    <string name="write_comment">Viết đánh giá</string>
    <string name="total_price">Tổng tiền:</string>

</resources>
