<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_bac"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/_100sdp"
        android:paddingRight="@dimen/_100sdp"
        android:paddingTop="@dimen/_60sdp"
        android:orientation="vertical"
        android:background="#80000000">

        <ImageView
            android:id="@+id/img_shop"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:src="@drawable/icon_home" />

        <TextView
            android:id="@id/img_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/txt_shop"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_gravity="center"
            android:src="@drawable/icon_shipper" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/txt_shipper"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/icon_payment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_payment"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

</LinearLayout>